modules/cstl-admin/grunt/src/less/main.less
/* ... */
.serviceTypeWMTS{
    background: #f5f5f5 url('../img/serviceType-wmts.svg') right bottom no-repeat;
}
.serviceTypeWPS{
    background: #f5f5f5 url('../img/serviceType-wps.svg') right bottom no-repeat;
}
.serviceTypeWFS{
    background: #f5f5f5 url('../img/serviceType-wfs.svg') right bottom no-repeat;
}
.serviceTypeWCS{
    background: #f5f5f5 url('../img/serviceType-wcs.svg') right bottom no-repeat;
}
/*
 * Dashboards
 */
.dashboard .sort-navbar {
    margin-bottom: 15px;
}
.dashboard .sort-navbar .navbar-inner {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    padding-left: 0;
    padding-right: 20px;
    border-bottom: 1px solid #e3e3e3;
    min-height: 40px;
}
.dashboard .sort-navbar .navbar-inner li a {
    padding: 10px 18px;
}
.dashboard .sort-navbar .navbar-inner li a .ascending .fa-caret-up, .dashboard .sort-navbar .navbar-inner li a .descending .fa-caret-down {
    display: inline-block;
}
.dashboard .sort-navbar .navbar-inner li.divider-vertical {
    border-left: 1px solid #e3e3e3;
}
.dashboard .sort-navbar .navbar-inner .divider-vertical {
    margin: 0;
    height: 40px;
}
.dashboard .sort-navbar .navbar-inner .btn {
    margin-top: 7px;
}
.dashboard .sort-navbar .navbar-inner input[type=text] {
    margin-top: 5px;
    margin-bottom: 5px;
}
.dashboard .sort-navbar .navbar-inner .ajax-loader {
    display: none;
    height: 30px;
    width: 30px;
    margin-right: 5px;
    margin-top: 5px;
    background: transparent url('../img/loader.gif') center center no-repeat;
}
.coverage-type-nd{
    font-size:14px; 
    margin-right:10px; 
    margin-top:8px; 
    font-weight:bold;
}
.btn-info.btn-small-selected{
    background-color: #6c6c6c;
    border: solid 1px #545454;
}
.btn-info.btn-small-selected:hover, .btn-info.btn-small-selected:focus{
    background-color: #545454;
    border: solid 1px #474747;
}
/*
 * Dashboard pagination.
 */
.dashboard .pagination-wrapper {
    height: 30px;
    margin-bottom: 10px;
}
.dashboard .pagination-wrapper .nb-results {
    line-height: 30px;
}
.dashboard .pagination-wrapper select.nb-per-page {
    width: 65px;
}
.dashboard .pagination-wrapper .pagination {
    margin: 0 5px 0 0;
}
.item-title{
    width: 545px;
    overflow:hidden;
    white-space:nowrap;
    text-overflow:ellipsis;
}
.item-title.title-sensorSystem{
    width: 469px;
}
.col-xs-6 .item-title{
    width: 200px;
}
.col-xs-6 .item-title.data-title{
    width: 190px;
}
.item-title.csw-title{
    width: 590px;
}
.item-title.title-bloc{
    width: 390px;
}
.item-title.title-bloc-service{
    width: 320px;
}
.item-title.title-modal{
    width: 350px;
}
/*
 * Dashboard selected item
 */
.dashboard .selected-item {
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
    background-color: white;
    border-bottom: none;
}
.dashboard .selected-item .block-header {
    background-color: #8ac1d4;
    color: white;
    border: solid 1px #77b7cd;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    padding: 0 10px;
    line-height: 40px;
    cursor: pointer;
}
.dashboard .selected-item .block-header.block-header-md {
    background-color: #e8bd94;
    border: solid 1px #e3b07f;
    color: #ffffff;
}
.dashboard .selected-item .block-header.block-header-sos {
    background-color: #7cc3b5;
    border: solid 1px #59b3a1;
    color: #ffffff;
}
.dashboard .selected-item .block-header.block-header-style {
    background-color: #9e96c2;
    border: solid 1px #8f86b9;
    color: #ffffff;
}
.dashboard .selected-item .block-header.block-header-mapcontext {
    background-color: #dad2bc;
    border: solid 1px #c8bc9b;
    color:#ffffff;
}
.dashboard .selected-item .block-header.block-header-process {
    background-color: #9ccc8f;
    border: solid 1px #7dbc6c;
    color:#ffffff;
}

.dashboard .selected-item .block-header i[class^="fa-"], .dashboard .selected-item .block-header i[class*=" fa-"], .dashboard .selected-item .block-header strong {
    line-height: 40px;
}
.dashboard .selected-item .block-content {
    border: 1px solid #DADADA;
    padding: 10px 15px 15px 15px;
    background-color:#EDEDED;
}
.dashboard .selected-item .block-content.block-vector{
    background:#EDEDED url('../img/block-content-vector.svg') right top no-repeat;
}
.dashboard .selected-item .block-content.block-raster{
    background:#EDEDED url('../img/block-content-raster.svg') right top no-repeat;
}
.dashboard .selected-item .block-content h6 {
    text-transform: uppercase;
    margin-top: 10px;
    margin-bottom: 2px;
}
.dashboard .selected-item .block-content h6 .tooltip {
    text-transform: none;
    font-weight: normal;
}
.dashboard .selected-item .block-content .separator {
    border-top: 1px solid #eeeeee;
    border-bottom: 1px solid #ffffff;
    margin-top: 10px;
}
.dashboard .selected-item .block-action {
    /*box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.08);*/
    padding: 10px;
    border-bottom: 1px solid #c6c6c6;
    background-color:#dadada;
}
.dashboard .selected-item .block-action .row {
    margin: 0;
}
.dashboard .selected-item .block-content .btn, .dashboard .selected-item .block-action .btn {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    background-image: none;
}
.dashboard .selected-item .block-action .btn {
    background-color: #8ac1d4;
    color:#ffffff;
    border: solid 1px #77b7cd;
    margin-bottom:2px;
    margin-top:2px;
}
.dashboard .selected-item .block-action .btn:hover, .dashboard .selected-item .block-action .btn:focus {
    background-color:#77b7cd;
    color:#fff;
    border-color:#64adc6;
}
.dashboard .selected-item .block-action .btn.btn-csw {
    background-color: #e8bd94;
    border: solid 1px #e3b07f;
}
/* ... */

